crates/wdl-engine/tests/tasks/missing-output-file/error.txt
error: failed to evaluate output `foo` for task `test`

Caused by:
    file `work/foo.txt` does not exist
  ┌─ tests/tasks/missing-output-file/source.wdl:9:14
  │
9 │         File foo = "foo.txt"
  │              ^^^

